crates/plotnik-tests/tests/03-analyze/self_recursion/no_escape_in_field.txt
E = (call body: (E))
------------------ DIAGNOSTICS -------------------
error: infinite recursion: no escape path
 --> query.ptk:1:18
  |
1 | E = (call body: (E))
  |                  ^
  |                  |
  |                  E references itself
  |
help: add an alternative to `E` that does not reference `E`
-------------------- SYMBOLS ---------------------
E
  E (cycle)
